accessibility fixes and dark mode experiment

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -16,27 +16,38 @@ body {
   background-attachment: scroll;
   background-clip: border-box;
   background-size: 600px 600px;
-
-  &::-webkit-scrollbar {
-    width: 10px;
-  }
-
-  &::-webkit-scrollbar-track {
-    background: #e8e3e2;
-  }
-
-  &::-webkit-scrollbar-thumb,
-  &::-webkit-scrollbar-thumb:horizontal {
-    width: 10px;
-    border-radius: 5px;
-    background: rgba(17, 27, 39, 1);
-  }
+  filter: invert(1);
 
   #__next {
     display: flex;
     flex-direction: column;
+    max-height: 100vh;
     min-height: 100vh;
+    overflow-y: scroll;
+
+    &::-webkit-scrollbar {
+      width: 8px;
+    }
+
+    &::-webkit-scrollbar-track {
+      background: transparent;
+    }
+
+    &::-webkit-scrollbar-thumb,
+    &::-webkit-scrollbar-thumb:horizontal {
+      border-radius: 4px;
+      background: rgba(17, 27, 39, 0.5);
+    }
   }
+}
+
+.display-image,
+.card-image,
+.rws-backdrop,
+.footer-section img,
+.contact-heading svg,
+.project-name {
+  filter: invert(1) !important;
 }
 
 .main-wrapper {
@@ -75,6 +86,9 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  list-style: none;
+  padding-inline: 0px;
+  margin-block: 0px;
 }
 
 .slider {
@@ -97,7 +111,7 @@ body {
   width: 116px;
   height: 40px;
   transition: all 0.15s ease;
-  border: none;
+  border-radius: 20px;
   color: rgb(20, 91, 205);
   background-color: transparent;
   z-index: 3;
@@ -234,11 +248,7 @@ body {
         gap: 10px;
         a {
           height: 26px;
-          background: radial-gradient(
-            rgba(0, 0, 0, 0.85) 1px,
-            rgba(0, 0, 0, 0.95) 1px
-          );
-          background-size: 4px 4px;
+          background: black;
           color: white;
           text-decoration: none;
           display: flex;
@@ -470,7 +480,7 @@ body {
       position: relative;
 
       span {
-        animation: changeword 4s linear infinite;
+        animation: changeword 6s linear infinite;
         position: absolute;
         top: -23.5px;
         left: 7.5px;
@@ -478,6 +488,10 @@ body {
         width: max-content;
         font-weight: 600;
         color: rgb(60, 60, 60);
+
+        b:nth-child(2) {
+          opacity: 0;
+        }
       }
 
       span:nth-child(1) {
@@ -485,6 +499,9 @@ body {
       }
       span:nth-child(2) {
         animation-delay: 2s;
+      }
+      span:nth-child(3) {
+        animation-delay: 4s;
       }
     }
   }
@@ -837,6 +854,12 @@ body {
   justify-content: space-between;
 }
 
+.flex-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .flex-start {
   display: flex;
   align-items: center;
@@ -844,6 +867,16 @@ body {
 }
 
 @media screen and (max-width: 500px) {
+  #__next {
+    overflow-y: visible !important;
+    min-height: 100vh;
+    max-height: max-content !important;
+
+    &::-webkit-scrollbar {
+      width: 0px;
+    }
+  }
+
   .footer {
     padding-bottom: 100px;
   }
@@ -853,14 +886,13 @@ body {
   }
 
   .name-card {
-    top: 0px;
-    position: relative;
-    margin: auto;
-    margin: 20px;
-    min-width: calc(100% - 40px);
-    max-width: calc(100% - 40px);
+    top: 18px;
+    margin: 18px;
+    min-width: calc(100% - 36px);
+    max-width: calc(100% - 36px);
     border-radius: 8px;
-    background-color: rgba(255, 255, 255, 0.65);
+    background-color: rgba(218, 218, 218, 0.5);
+    backdrop-filter: blur(6px);
     border: 1px solid rgba(180, 180, 180, 0.15);
     box-shadow: 0px 0px 12px rgba(180, 180, 180, 0.15);
 
@@ -972,6 +1004,7 @@ body {
 
   .blog-page-wrapper {
     max-width: calc(100vw - 40px);
+    margin: auto;
 
     .markdown {
       padding-top: 20px;
@@ -1055,15 +1088,15 @@ body {
     transform: translateY(10px);
     opacity: 0;
   }
-  2% {
+  3.33% {
     opacity: 1;
     transform: translateY(0);
   }
-  48% {
+  30% {
     opacity: 1;
     transform: translateY(0);
   }
-  50% {
+  33.33% {
     opacity: 0;
     transform: translateY(-10px);
   }
